fixed the white space above h1

--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ h5 {
 .header h1 {
 	text-align:center;
 	padding:50px 0px 50px 0px;
+	margin-top: 0px;
 	}
 .sections {
 	position:center;
